tests/baselines/reference/tsxSpreadAttributesResolution5.errors.txt
tests/cases/conformance/jsx/file.tsx(21,19): error TS2322: Type '{ x: string; y: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'.
  Type '{ x: string; y: number; }' is not assignable to type 'PoisonedProp'.
    Types of property 'y' are incompatible.
      Type 'number' is not assignable to type '2'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    
    import React = require('react');
    
    interface PoisonedProp {
        x: string;
        y: 2;
    }
    
    class Poisoned extends React.Component<PoisonedProp, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    let obj = {
        x: "hello world",
        y: 2
    };
    
    // Error as "obj" has type { x: string; y: number }
    let p = <Poisoned {...obj} />;
                      ~~~~~~~~
!!! error TS2322: Type '{ x: string; y: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'.
!!! error TS2322:   Type '{ x: string; y: number; }' is not assignable to type 'PoisonedProp'.
!!! error TS2322:     Types of property 'y' are incompatible.
!!! error TS2322:       Type 'number' is not assignable to type '2'.